--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -2,61 +2,112 @@ footer {
     background: $prolikeblue;
     height: 100vh;
     width: 100%;
-    padding: 0 10vh;
     display: flex;
-    align-items: center;
+    justify-content: space-between;
+    padding-top: 35vh;
 
-    .row {
-        width: inherit;
+    .footer-logo {
+        height: 30px;
+        margin-left: 100px; // fix this at some point
+        user-select: none;
     }
 
-    h1 {
-        color: $prolikeyellow;
-        font-weight: 600;
-        font-size: 20px;
+    .footer-items {
+
+        .row {
+            width: 850px;
+            padding: 0;
+            display: flex;
+            justify-content: space-between;
+            margin-right: 100px; // fix this at some point
+
+            .col-lg,
+            .col-sm-12,
+            .col-xs-12 {
+                padding-left: 0 !important;
+                padding-right: 0 !important;
+            }
+
+            h1 {
+                color: $prolikeyellow;
+                font-size: 16px;
+                line-height: 24px;
+                margin-bottom: 24px;
+            }
+
+            a,
+            p {
+                color: $white;
+                font-size: 14px;
+                line-height: 18px;
+                display: block;
+                margin: 0;
+                margin-bottom: 24px;
+                font-weight: 500;
+                cursor: pointer;
+            }
+
+            a:hover,
+            p:hover {
+                color: $prolikeyellow;
+                text-decoration: none;
+                transition: .1s all ease-in;
+            }
+        }
     }
 
-    p {
-        font-size: 20px;
-        margin: 0;
-        font-weight: 500;
-        color: $white;
-    }
+    .bottom-bar {
+        height: 70px;
+        width: 100%;
+        background: #172033;
+        position: absolute;
+        align-self: flex-end;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 100px;
 
-    a {
-        font-size: 20px;
-        display: block;
-        color: $white;
-        margin: 0;
-        font-weight: 500;
-    }
+        span {
+            color: $white;
+            opacity: .75;
+            font-size: 14px;
+            line-height: 14px;
+            user-select: none;
+        }
 
-    a:hover {
-        color: $prolikeyellow;
-        text-decoration: none;
+        .fab {
+            color: $white;
+            margin-left: 15px;
+        }
     }
-
 }
 
 @media (max-width: 768px) {
 
     footer {
         height: auto;
-        padding: 10vh 5vh 0 5vh;
+        flex-direction: column;
+        padding: 0 15px;
 
-        .row {
-            width: initial;
+
+        .footer-logo {
+            width: 45%;
+            margin-left: 2.5px;
+            margin: 100px 0;
         }
 
-        .col-sm-12,
-        .col-xs-12 {
-            padding: 0 0 5vh 0;
+        .footer-items {
 
-            p {
-                font-size: 20px;
-                margin: 0;
-                color: $white;
+            .row {
+                width: 100%;
+                padding-right: 20px; // fix this at some point
+                margin-left: 2.5px;
             }
+        }
+
+        .bottom-bar {
+            position: inherit;
+            padding: 0 2.5px;
         }
     }
 }
