close #334 fix footer totally

--- a/_includes/components/footer.html
+++ b/_includes/components/footer.html
@@ -18,7 +18,7 @@
 {%if include.caption%}{{include.caption}}<p>{%else%}add "caption=your caption here" to the include<p>{%endif%}
     {% endcapture %}
 
-    <footer id="{{sectionid || strip || strip_newlines}}">
+    <footer>
       <img class="footer-logo" src="/images/logos/prolike-logo.png" alt="prolike footer logo" draggable="false">
       <div class="footer-items">
         <div class="row">
