--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,33 +1,33 @@
 <head>
 
-<!-- Google Tag Manager -->
+  <!-- Google Tag Manager -->
 
-<script>
-  (function (w, d, s, l, i) {
-    w[l] = w[l] || [];
-    w[l].push({
-      'gtm.start': new Date().getTime(),
-      event: 'gtm.js'
-    });
-    var f = d.getElementsByTagName(s)[0],
-      j = d.createElement(s),
-      dl = l != 'dataLayer' ? '&l=' + l : '';
-    j.async = true;
-    j.src =
-      'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-    f.parentNode.insertBefore(j, f);
-  })(window, document, 'script', 'dataLayer', 'GTM-NSLZT72');
-</script>
+  <script>
+    (function (w, d, s, l, i) {
+      w[l] = w[l] || [];
+      w[l].push({
+        'gtm.start': new Date().getTime(),
+        event: 'gtm.js'
+      });
+      var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s),
+        dl = l != 'dataLayer' ? '&l=' + l : '';
+      j.async = true;
+      j.src =
+        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+      f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-NSLZT72');
+  </script>
 
-<!-- Jekyll invironment variable -->
+  <!-- Jekyll invironment variable -->
 
-    {% if jekyll.environment == "production" %}
-      {% assign site_prefix = site.prod_site %}
-    {% else %}
-      {% assign site_prefix = site.stage_site %}
-    {% endif %}
+  {% if jekyll.environment == "production" %}
+  {% assign site_prefix = site.prod_site %}
+  {% else %}
+  {% assign site_prefix = site.stage_site %}
+  {% endif %}
 
-<!-- Meta -->
+  <!-- Meta -->
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -36,7 +36,7 @@
   <meta name="keywords" content="Continuous Delivery, Agile, Docker">
   <link data-proofer-ignore rel="canonical" href="{{ site_prefix }}{{ page.url }}">
 
-<!-- Open Graph tags -->
+  <!-- Open Graph tags -->
 
   <meta property="og:locale" content="en_US">
   <meta property="og:title" content="{%if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
@@ -48,7 +48,7 @@
   <meta property="article:published_time" content="{{ page.date }}" />
   <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
 
-<!-- Touch icons -->
+  <!-- Touch icons -->
 
   <link data-proofer-ignore rel="apple-touch-icon" href="/images/icons/apple-touch-icon.png" />
   <link data-proofer-ignore rel="apple-touch-icon" sizes="57x57" href="/images/icons/apple-touch-icon-57x57.png" />
@@ -60,46 +60,43 @@
   <link data-proofer-ignore rel="apple-touch-icon" sizes="152x152" href="/images/icons/apple-touch-icon-152x152.png" />
   <link data-proofer-ignore rel="apple-touch-icon" sizes="180x180" href="/images/icons/apple-touch-icon-180x180.png" />
 
-<!-- Twitter Card tags -->
+  <!-- Twitter Card tags -->
 
-  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:card" content="summary_large_image" />
   <meta data-proofer-ignore name="twitter:image" content="{% if page.image %}{{ site_prefix }}{{ page.image | remove: '..' }}{% else %}{{ site_prefix }}{{ site.image }}{% endif %}">
   <meta data-proofer-ignore name="twitter:title" content="{%if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
   <meta data-proofer-ignore name="twitter:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
 
-<!-- Page Title -->
+  <!-- Page Title -->
 
   <title>
     {% if layout.subpage %}
     {{page.title}} - {{layout.subpage}} - {{site.title}}
     {% elsif page.title == "Prolike" %}
-      {{ site.title }}
+    {{ site.title }}
     {% else %}
-      {{ page.title }} - {{ site.title }}
-    {% endif %}  
-
-    
+    {{ page.title }} - {{ site.title }}
+    {% endif %}
   </title>
-  
-<!-- Bootstrap core CSS -->
+
+  <!-- Bootstrap core CSS -->
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css" integrity="sha384-PDle/QlgIONtM1aqA2Qemk5gPOE7wFq8+Em+G/hmo5Iq0CCmYZLv3fVRDJ4MMwEA" crossorigin="anonymous">
 
-<!-- Custom fonts for this template -->
+  <!-- Custom fonts for this template -->
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"/>
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" />
   <link rel="stylesheet" href="https://use.typekit.net/dee0mal.css">
 
-<!-- Favicon -->
+  <!-- Favicon -->
 
   <link rel="shortcut icon" type="image/x-icon" href="/images/icons/favicon.ico">
 
-<!-- Custom styles for this template -->
+  <!-- Custom styles for this template -->
 
   <link href="/css/main.css" rel="stylesheet">
 
-<!-- Fullpage.js scripts -->
+  <!-- Fullpage.js scripts -->
 
   <link rel="stylesheet" href="/css/fullpage.css">
 
@@ -107,13 +104,15 @@
 
   <link rel="alternate" title="{{ site.title }}" type="application/json" href="{{ '/feed.json' prepend: site.url }}" />
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145588327-1"></script>
 
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() {
+      dataLayer.push(arguments);
+    }
     gtag('js', new Date());
 
     gtag('config', 'UA-145588327-1');
