--- a/_sass/components/_navigation.scss
+++ b/_sass/components/_navigation.scss
@@ -132,7 +132,7 @@ button:focus {
   height: 100vh;
   width: 100%;
   left: 0;
-  top: 60px;
+  top: 6.5vh;
   padding: 0 0 120px 0;
   text-transform: uppercase;
   font-weight: 700;
