--- a/_layouts/anythings.html
+++ b/_layouts/anythings.html
@@ -2,13 +2,6 @@
 layout: page
 ---
 
-<div class="container-fluid stories_container">
-    <div class="story-header">
-        <div class="container align-middle">
-            <h3>Our Stories are our collection of anything and everything<br>Prolike</h3>
-        </div>
-    </div>
-    <div class="container">
-        {{ content }}
-    </div>
+<div class="posts-container">
+    {{ content }}
 </div>
