--- a/_sass/components/_footer.scss
+++ b/_sass/components/_footer.scss
@@ -100,11 +100,13 @@ footer {
 
             .row {
                 width: 100%;
-                padding-right: 20px;
+                padding-right: 2.5px;
                 margin-left: 2.5px;
 
                 h1 {
                     font-size: 16px;
+                    margin-bottom: 16px;
+                    font-weight: 700;
                 }
 
                 a,
