--- a/_sass/pages/_anything.scss
+++ b/_sass/pages/_anything.scss
@@ -27,7 +27,7 @@
     }
 
     .card-body {
-        padding: 20px 0;
+        padding: 2vh 0;
 
         a {
             text-decoration: none !important;
@@ -35,10 +35,10 @@
         }
 
         h5 {
-            font-size: 40px;
-            line-height: 55px;
+            font-size: 4vh;
+            line-height: 5.5vh;
             color: $black;
-            padding: 20px 0 5px 0;
+            padding: 2vh 0 .5vh 0;
             text-transform: uppercase;
             font-weight: 700;
             font-family: 'Oswald', sans-serif;
@@ -47,15 +47,15 @@
 
         .tags {
             color: $prolikeyellow;
-            font-size: 25px;
+            font-size: 2.5vh;
             text-transform: uppercase;
             font-family: 'Oswald', sans-serif;
             text-decoration: none;
-            margin-right: 10px;
+            margin-right: 1vh;
         }
 
         p {
-            font-size: 20px;
+            font-size: 2vh;
             user-select: none;
             max-width: 90%;
         }
