--- a/_sass/pages/_anything.scss
+++ b/_sass/pages/_anything.scss
@@ -7,7 +7,7 @@
 
     .wrapper {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-column-gap: 5vh;
         grid-row-gap: 5vh;
     }
@@ -19,7 +19,7 @@
     }
 
     .card-img-top {
-        height: 45vh;
+        height: 25vh;
         width: 100%;
         background-size: cover;
         background-position: center;
