--- a/_includes/components/signup.html
+++ b/_includes/components/signup.html
@@ -1,1 +1,8 @@
-<h1>tissemand</h1>
+<section class="signup">
+    <h1>While we have your attention</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quis tempora voluptas ipsam nesciunt fugiat repudiandae debitis delectus enim repellendus magnam, itaque consequatur amet quas.</p>
+    <span>
+        <a class="mailchimp" href="/profeed-signup"><i class="far fa-envelope"></i>Profeed</a>
+        <a class="eventbrite" href="/events-signup"><i class="far fa-calendar-alt"></i>Next event</a>
+    </span>
+</section>
