--- a/css/main.scss
+++ b/css/main.scss
@@ -11,6 +11,7 @@
 
 @import "components/navigation.scss";
 @import "components/footer.scss";
+@import "components/signup.scss";
 
 // Pages: All of our styling for our individual pages
 
