close #355 create link component for posts

--- a/_includes/components/signup.html
+++ b/_includes/components/signup.html
@@ -2,7 +2,7 @@
     <h1>While we have your attention</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quis tempora voluptas ipsam nesciunt fugiat repudiandae debitis delectus enim repellendus magnam, itaque consequatur amet quas.</p>
     <span>
-        <a class="mailchimp" href="/profeed-signup"><i class="far fa-envelope"></i>Profeed</a>
-        <a class="eventbrite" href="/events-signup"><i class="far fa-calendar-alt"></i>Next event</a>
+        <a class="mailchimp" href="/profeed-signup/" data-proofer-ignore><i class="far fa-envelope"></i>Profeed</a>
+        <a class="eventbrite" href="/events-signup/" data-proofer-ignore><i class="far fa-calendar-alt"></i>Next event</a>
     </span>
 </section>
