--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -1,28 +1,29 @@
-<nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">
-      <img class="logo" alt="Prolike" src="/images/logos/prolike-logo.png">
-    </a>
-
-    <div class="navigation-right">
-      <div class="popup" onclick="myFunction()"> <i class="fas fa-bars"></i>
-        <span class="popuptext" id="myPopup">
+<nav>
+  <a class="logo" href="/"><img src="/images/logos/prolike-logo.png" alt="Prolike website logo"></a>
+  <div class="menu-wrap">
+    <input type="checkbox" class="toggler">
+    <div class="hamburger">
+      <div></div>
+    </div>
+    <div class="menu">
+      <div>
+        <div>
           <ul>
-            <li> <a href="/#home" data-proofer-ignore>Home</a></li>
-            <li><a href="/#why" data-proofer-ignore>Why</a></li>
-            <li> <a href="/#how" data-proofer-ignore>How</a></li>
-            <li> <a href="/#what" data-proofer-ignore>What</a></li>
+            <li><a href="/#home">Home</a></li>
+            <li><a href="/#why">Why</a></li>
+            <li><a href="/#how">How</a></li>
+            <li><a href="/#what">What</a></li>
             {% assign sorted_navi = site.pages | sort: 'order' %}
             {% for page in sorted_navi %}
             {% if page.navigation == true %}
-
             <li> <a href="{{ page.url }}" data-proofer-ignore>{{ page.title }}</a></li>
-
             {% endif %}
             {% endfor %}
             <li> <a href="/boards/" class="boards-button nav-btn">boards</a> </li>
             <li> <a class="logout-button nav-btn">Log in</a> </li>
           </ul>
-        </span>
+        </div>
       </div>
     </div>
-  </nav>
+  </div>
+</nav>
