--- a/_sass/pages/_stories.scss
+++ b/_sass/pages/_stories.scss
@@ -1,8 +1,8 @@
 
 .things {
     width: 800px;
-    margin: 60px auto 0 auto;
-    padding: 50px 0;
+    margin: 0 auto;
+    padding: 15vh 0;
 
     .intro {
         width: 100%;
