--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -9,18 +9,18 @@
       <div>
         <div>
           <ul>
-            <li><a href="/#home">Home</a></li>
-            <li><a href="/#why">Why</a></li>
-            <li><a href="/#how">How</a></li>
-            <li><a href="/#what">What</a></li>
+            <li><a href="/#home" data-proofer-ignore>Home</a></li>
+            <li><a href="/#why" data-proofer-ignore>Why</a></li>
+            <li><a href="/#how" data-proofer-ignore>How</a></li>
+            <li><a href="/#what" data-proofer-ignore>What</a></li>
             {% assign sorted_navi = site.pages | sort: 'order' %}
             {% for page in sorted_navi %}
             {% if page.navigation == true %}
-            <li> <a href="{{ page.url }}" data-proofer-ignore>{{ page.title }}</a></li>
+            <li><a href="{{ page.url }}" data-proofer-ignore>{{ page.title }}</a></li>
             {% endif %}
             {% endfor %}
-            <li> <a href="/boards/" class="boards-button nav-btn">boards</a> </li>
-            <li> <a class="logout-button nav-btn">Log in</a> </li>
+            <li><a href="/boards/" class="boards-button nav-btn">boards</a></li>
+            <li><a class="logout-button nav-btn">Log in</a></li>
           </ul>
         </div>
       </div>
