New signup text

--- a/_includes/components/signup.html
+++ b/_includes/components/signup.html
@@ -1,6 +1,6 @@
 <section class="signup">
     <h1>While we have your attention</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quis tempora voluptas ipsam nesciunt fugiat repudiandae debitis delectus enim repellendus magnam, itaque consequatur amet quas.</p>
+    <p>Sign up to our Profeed and receive news and information about our latest events, or if you can't wait, sign up for our event right away!</p>
     <span>
         <a class="mailchimp" href="/profeed-signup/" data-proofer-ignore><i class="far fa-envelope"></i>Profeed</a>
         <a class="eventbrite" href="/events-signup/" data-proofer-ignore><i class="far fa-calendar-alt"></i>Next event</a>
