--- a/_layouts/anything-post.html
+++ b/_layouts/anything-post.html
@@ -11,5 +11,6 @@ layout: page
   </span>
   <div class="image-header-bg" style="background-image: url('{{ page.image }}') !important;"></div>
   {{ page.content }}
+  HEJ
   {% include components/signup.html %}
 </div>
