--- a/_includes/components/footer.html
+++ b/_includes/components/footer.html
@@ -56,7 +56,7 @@
           <div class="footer-list">
             <h1>Contact</h1>
             <a href="mailto:hey@prolike.io?Subject=Hello%20again" target="_blank">hey@prolike.io</a>
-            <a href="https://datacvr.virk.dk/data/visenhed?enhedstype=virksomhed&id=39464101&soeg=prolike&type=undefined&language=us">VAT No.: 39464101</a>
+            <!-- <a href="https://datacvr.virk.dk/data/visenhed?enhedstype=virksomhed&id=39464101&soeg=prolike&type=undefined&language=us">VAT No.: 39464101</a> -->
             <a href="tel:+45 20 872 530">+45 20 872 530</a>
             <a href="https://goo.gl/maps/Esji6p1mx7x">Allerød Stationsvej 4</a>
             <p>3450 Allerød</p>
