--- a/_includes/components/signup.html
+++ b/_includes/components/signup.html
@@ -2,7 +2,7 @@
     <h1>While we have your attention</h1>
     <p>Sign up to our Profeed and receive news and information about our latest events, or if you can't wait, sign up for our event right away!</p>
     <span>
-        <a class="mailchimp" href="/profeed-signup/" data-proofer-ignore><i class="far fa-envelope"></i>Profeed</a>
-        <a class="eventbrite" href="/events-signup/" data-proofer-ignore><i class="far fa-calendar-alt"></i>Next event</a>
+        <a id="ga-mailchimp-from-story" class="mailchimp" href="/profeed-signup/" data-proofer-ignore><i class="far fa-envelope"></i>Profeed</a>
+        <a id="ga-eventbrite-from-story" class="eventbrite" href="/events-signup/" data-proofer-ignore><i class="far fa-calendar-alt"></i>Next event</a>
     </span>
 </section>
