close #367 polish mailchimp signup page

--- a/css/main.scss
+++ b/css/main.scss
@@ -21,6 +21,7 @@
 @import "pages/flow.scss";
 @import "pages/services.scss";
 @import "pages/stories.scss";
+@import "pages/profeedSignup.scss";
 
 // Miscellaneous: All the stuff we can't define just yet
 
