--- a/css/main.scss
+++ b/css/main.scss
@@ -22,6 +22,7 @@
 @import "pages/services.scss";
 @import "pages/stories.scss";
 @import "pages/profeedSignup.scss";
+@import "pages/events.scss";
 
 // Miscellaneous: All the stuff we can't define just yet
 
