--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -6,14 +6,29 @@ layout: page
     <div class="wrapper">
 
         {% for event in site.events %}
-
+<a href="{{ event.url }}">
         <div class="events-boks">
 <img class="events-image" src="{{ event.image }}">
 <h3 class="events-date">{{ event.date | date: "%d %B %Y" }}</h3>
 
-<h2 class="events-heading">{{ event.title }}</h2>
+<h2 class="events-heading">
+    {% capture nowunix %}
+  {{ 'now' | date: '%s' | plus: 0 }}
+{% endcapture %}
+{% capture posttime %}
+  {{ event.date | date: '%s' | plus: 86400 }}
+{% endcapture %}
+{% capture datepassed %}
+  {{ event.date | date: '%s' | plus: 172800 }}
+{% endcapture %}
+{% if posttime < nowunix %}
+ <span>Past:</span> 
+{% endif %}
+    {{ event.title }}
+    
+</h2>
 
-        </div>
+        </div></a>
 
         {% endfor %}
     </div>
