--- a/css/main.scss
+++ b/css/main.scss
@@ -31,3 +31,4 @@
 @import "miscellaneous/forms.scss";
 @import "miscellaneous/customer.scss";
 @import "miscellaneous/boards.scss";
+@import "miscellaneous/event.scss";
