--- a/_includes/components/signup.html
+++ b/_includes/components/signup.html
@@ -3,6 +3,6 @@
     <p>Sign up to our Profeed and receive news and information about our latest events, or if you can't wait, sign up for our event right away!</p>
     <span>
         <a id="ga-mailchimp-from-story" class="mailchimp" href="/profeed-signup/" data-proofer-ignore><i class="far fa-envelope"></i>Profeed</a>
-        <a id="ga-eventbrite-from-story" class="eventbrite" href="/events-signup/" data-proofer-ignore><i class="far fa-calendar-alt"></i>Next event</a>
+        <a id="ga-eventbrite-from-story" class="eventbrite" href="/events/" data-proofer-ignore><i class="far fa-calendar-alt"></i>Events</a>
     </span>
 </section>
