--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -6,7 +6,7 @@ layout: page
     <div class="wrapper">
 
         <div class="event-boks">
-<img class="event-image" src="{{ page.image }}">
+<img class="event-image" src="{{ page.image }}" alt="{{ page.title }}">
 <h3 class="event-date">{{ page.date  | date: '%d %B %Y' }}</h3>
 
 <h2 class="event-heading">{{ page.title }}</h2>
