close #373 fix header on board page

--- a/_sass/miscellaneous/_boards.scss
+++ b/_sass/miscellaneous/_boards.scss
@@ -32,9 +32,9 @@ button {
     overflow: hidden;
 }
 
-button:hover {
-    color: white;
-    transition: 0.8s;
-}
+// button:hover {
+//     color: white;
+//     transition: 0.8s;
+// }
 
 }
